[tool.poetry]
name = "pytelligence"
version = "0.2.2"
description = "pycaret clone aimed for simplicity and production ready code"
authors = ["Friedrich G. Froebel <froebel.business@gmail.com>"]
license = "All rights reserved"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.0"
pandas = "^2.1.0"
seaborn = "^0.12.2"
pyyaml = "^6.0.1"
optuna = "^3.3.0"
plotly = "^5.16.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pytest-watch = "^4.2.0"
notebook = "^7.0.3"
black = {extras = ["jupyter"], version = "^23.7.0"}
isort = "^5.12.0"
pyarrow = "^13.0.0"
colorlog = "^6.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = "."
filterwarnings = [
    "ignore::FutureWarning",
]